src/styles/GlobalDark.scss
/* SCSS Variables */
:root {
    --PageBG: #416969; //*
    --PageBGCon: #4B8B8B;
    --PrimarySurf: #2c3d3d; //*
    --AccentDark: #FF6F61;
    --TitleTxt: #2E2E2E;
    --MainHeader: #363636;
    --TxtPrimary: #F5FFFA;
    --TxtSecondary: #353535; //*
    --LinkHL: #69cdff;
    --TableBG: #FFE4B5;
    --TableTxt: black;
    --SVGColor: #ffffff;
    --CommCardH: 93vh;
    --Border: black;
    --TopBarHeight: 5vh;
}

/* Font Imports */
@font-face {
    font-family: "Concert One";
    src: url("../assets/fonts/ConcertOne-Regular.ttf") format("truetype");
}

@font-face {
    font-family: "Shrikhand";
    src: url("../assets/fonts/Shrikhand-Regular.ttf") format("truetype");
}

// Page Outline
body,
.container,
.page {
    background-color: var(--PageBG);
    font-family: "Concert One", sans-serif;
    color: var(--TxtPrimary);
    max-width: 100vw;
    margin: 0 0 0 0;
    padding: 0 0 0 0;

    p {
        width: 95%;
    }
}

.page {
    margin-top: var(--TopBarHeight);
    z-index: 1;
    margin: 0 1vw 0 1vw;
    font-size: 200%;
}

// .break-line is a horizontal span line separating content vertically
.break-line {
    width: 100%;
    height: 5vh;
    background-color: var(--PageBG);
    margin: 0 auto;
}

// Persistent Elements
// TopPanel
.TopPanel {
    display: grid;
    position: fixed;
    top: 0;
    left: 0;
    height: var(--TopBarHeight);
    width: 100vw;
    grid-template-columns: 7fr 1fr;
    background-color: var(--PrimarySurf);
    overflow: auto;
    scrollbar-width: none;
    z-index: 3;

    .MainNav {
        display: flex;
        grid: 1;
        height: var(--TopBarHeight);
        width: auto;
        align-items: center;
        justify-content: flex-start;
        flex-wrap: nowrap;
        overflow: scroll;
        scrollbar-width: none;

        ul {
            display: flex;
            overflow: scroll;
            scrollbar-width: none;
            align-items: center;
            list-style: none;
            width: 100%;
            height: var(--TopBarHeight);

            li {
                gap: 1em;
                text-align: left;

                a {
                    gap: 1em;
                    color: var(--TxtPrimary);
                    padding: 0 0.5em;
                    font-size: 4vh;
                    text-decoration: none;
                }
            }
        }
    }

    .Socials {

        display: flex;
        grid: 2;
        height: var(--TopBarHeight);
        align-items: center;
        justify-content: flex-end;
        text-wrap: wrap;
        flex-wrap: wrap-reverse;
        overflow: scroll;
        scrollbar-width: none;
        width: calc(auto + 1em);
        height: var(--TopBarHeight);
        z-index: 2;

        ul,
        img {
            display: flex;
            overflow: scroll;
            scrollbar-width: none;
            align-items: center;
            justify-content: start;
            text-decoration: none;
            list-style: none;
            height: var(--TopBarHeight);

            padding: 0 0 0 0;
            margin: 0 0 0 0;

            text-wrap: wrap;
        }

        img {
            width: auto;
        }
    }
}


// BottomPanel
.BottomPanel {
    white-space: nowrap;
    display: grid;
    position: relative;
    bottom: -1vh;
    left: 0;
    right: 0;
    height: var(--BottomPanelHeight);
    background-color: var(--BottomPanelColor);
    z-index: 1;
    padding: 0 0 0 0;
    margin: 0 0 0 0;
    width: 100vw;
    max-width: 100%;
    overflow: auto;
    background-color: var(--PrimarySurf);
    scrollbar-width: thin;
    z-index: 2;
    transform-origin: left;

    padding: 0 0 0 0;
    margin: 0 0 0 0;

    .bottom-container {
        width: 100%;
        display: flex;
        justify-content: space-between;
        gap: 2rem;

        .advertise-section {
            width: 40%;
            padding: 0;
            text-align: center;

            .advertise-link {
                color: var(--TxtPrimary);
                text-decoration: none;
                display: flex;
                justify-content: center;
                align-items: center;
                height: 100%;
                width: 100%;

                &:hover {
                    color: var(--LinkHL);
                }
            }

            .advertise-content {
                font-size: 1.2rem;
                line-height: 1.6;
                transition: transform 0.2s ease-in-out;
                background-color: var(--AccentDark);
                color: var(--TxtSecondary);

                padding: 5% 20% 5% 20%;
                border-radius: 10%;

                &:hover {
                    transform: scale(1.05);
                }
            }
        }

        .contact-section {
            width: 55%;

            h2 {
                margin-bottom: 1rem;
                font-size: 1.5rem;
                color: var(--TxtPrimary);
            }

            ul {
                padding: 0;
                list-style: none;
                color: var(--TxtPrimary);

                li {
                    margin-bottom: 0.5rem;
                    font-size: 1rem;
                    line-height: 1.6;

                    a {
                        color: var(--LinkHL);
                        text-decoration: none;

                        &:hover {
                            text-decoration: underline;
                        }
                    }
                }
            }
        }
    }
}

// Index Elements
// SharkSplash
.SharkSplash {
    position: relative;
    width: 100%;
    height: fit-content;
    margin: 48vh 0 33vh 0;

    // Fully center horizontally
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;

    img {
        scale: 120%;
    }

    h1 {
        font-size: 120%;
    }
}

// CarouselPromo
.CarouselPromo {
    position: relative;
    padding: 0 0 0 0;
    margin: 0 0 1vh 0;

    h1 {
        font-size: 2.5rem;
        padding: 0;
        margin: 0 0 2vh 0;
    }

    .carousel-container {
        display: flex;
        width: 90vw;
        overflow-x: auto;
        scrollbar-width: thin;

        .carousel-wrapper {
            display: flex;

            .carousel-item {
                min-width: 10%;
                display: flex;
                flex-direction: column;
                align-items: center;
                width: 100%;
                margin: 0 1em 0 1em;

                .image-container {
                    position: relative;
                    width: 100%;

                    img {
                        max-height: 30vh;
                        width: auto;
                        height: auto;
                        object-fit: contain;
                    }

                    .status-overlay {
                        position: absolute;
                        display: flex;
                        top: 50%;
                        left: 10%;
                        rotate: -45deg;
                        background: rgba(255, 0, 0, 0.5);
                        scale: 160%;
                        align-items: center;
                    }
                }

                .project-title {
                    text-align: center;
                    font-size: 100%;
                }
            }
        }
    }
}

// Our Mission
.OurMission {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 0 2rem;
    max-width: 100%;
    box-sizing: border-box;

    margin: 7vh 0 8vh 0;

    p {
        text-align: center;
        max-width: 90%;
        width: 100%;
        margin: 0 0 0 0;
        font-size: 3vw;
    }
}

